[gd_scene load_steps=7 format=3 uid="uid://d3ycu8bsiwhr3"]

[ext_resource type="Script" uid="uid://tuamaq6voi08" path="res://Scripts/File/pdf_reader.gd" id="1_7oje2"]
[ext_resource type="AudioStream" uid="uid://cgc3eqmsakyo7" path="res://assets/sounds/pop.mp3" id="2_fhtmm"]
[ext_resource type="StyleBox" uid="uid://dwkn57nwejros" path="res://Scenes/File_Window/styles/file_window_focused.tres" id="3_21mgx"]
[ext_resource type="Texture2D" uid="uid://iye2wsnbbrqw" path="res://assets/visuals/close.png" id="3_e58of"]
[ext_resource type="StyleBox" uid="uid://bv5gpockhvor8" path="res://Scenes/File_Window/styles/file_window_unfocused.tres" id="4_4h3uy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8dvg"]
size = Vector2(300, 537)

[node name="pdf_reader" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7oje2")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="pop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_fhtmm")

[node name="Window" type="Window" parent="."]
position = Vector2i(0, 36)
size = Vector2i(300, 500)
always_on_top = true
theme_override_colors/title_color = Color(0, 0, 0, 1)
theme_override_constants/close_h_offset = 25
theme_override_constants/close_v_offset = 25
theme_override_icons/close = ExtResource("3_e58of")
theme_override_styles/embedded_border = ExtResource("3_21mgx")
theme_override_styles/embedded_unfocused_border = ExtResource("4_4h3uy")

[node name="TextEdit" type="TextEdit" parent="Window"]
clip_contents = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Hello my name is text edit"

[node name="bounce" type="AnimatableBody2D" parent="."]
position = Vector2(150, 275)

[node name="CollisionShape2D" type="CollisionShape2D" parent="bounce"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_d8dvg")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="pop" to="." method="_on_pop_finished"]
[connection signal="size_changed" from="Window" to="." method="_on_window_size_changed"]
